# gpt-playground

./: .dockerignore  Dockerfile  README.md
gpt-app/: package-lock.json  package.json
gpt-app-server/: .gitignore  README.rst  pyproject.toml
gpt-app-server/filings/: 000128176118000114-rf-2018930x10xq.htm  000128176119000019-rf-20181231x10k.htm  000128176119000045-rf-2019331x10xq.htm  000128176120000087-rf-2020930x10xq.htm  000128176121000012-rf-20201231.htm  000128176121000043-rf-20210331.htm  000128176121000067-rf-20210630.htm  000128176121000079-rf-20210930.htm  000128176122000016-rf-20211231.htm  000128176122000030-rf-20220331.htm  000128176122000046-rf-20220630.htm  000128176122000060-rf-20220930.htm  000128176123000012-rf-20221231.htm  000128176123000032-rf-20230331.htm  000128176123000045-rf-20230630.htm
gpt-app-server/gpt_app_server/: download_filings.py  download_llm.py  extract_filing_embeddings.py  extract_filing_langchain.py  gpt.py  main.py  prompt.py
gpt-app-server/tests/: test_gpt_app_server.py
gpt-app/src/: App.tsx  Chat.tsx  DragDrop.tsx  Home.tsx  Prompt.tsx  Question.tsx  index.tsx
gpt-app/src/pages/: Chat.tsx  Home.tsx  Prompt.tsx
gpt-app/src/state/: providers.tsx
